<resources>
    <string name="app_name">Android博客</string>

    <!-- 导航 -->
    <string name="nav_discover">发现</string>
    <string name="nav_category">分类</string>
    <string name="nav_author">作者</string>
    <string name="nav_recommend">推荐</string>
    <string name="nav_favorite">收藏</string>
    <string name="nav_settings">设置</string>
    <string name="nav_title_other">其他</string>

    <string name="loading">数据加载中...</string>
    <string name="has_not_more_data">没有啦...</string>
    <string name="can_not_find_data">没有找到想要的数据</string>
    <string name="retry">请重试</string>

    <string name="please_input_key_words">请输入关键字</string>

    <string name="search_history">历史记录</string>
    <string name="delete_search_history_succes">%1$s 记录已删除</string>
    <string name="network_error">网络连接错误，请检查网络状态</string>

    <string name="feedback">反馈</string>
    <string name="detail">详情</string>
    <string name="issue">issue</string>
    <string name="favorite">收藏</string>
    <string name="favorite_success">收藏成功</string>
    <string name="unfavorite">取消收藏</string>
    <string name="unfavorite_success">取消收藏成功</string>
    <string name="donot_have_any_favorite">未收藏任何数据</string>

    <string name="translator">译者</string>
    <string name="author">作者</string>
    <string name="category">分类</string>
    <string name="o_author">原文作者</string>
    <string name="post_time">发表时间</string>
    <string name="o_post_time">原文发表时间</string>
    <string name="source_link">来源链接</string>
    <string name="o_link">原文链接</string>

    <string name="get_blog_info_error">获取博客信息失败</string>

    <string name="about">关于</string>
    <string name="version">版本：%1$s</string>
    <string name="about_app"><![CDATA[[Android博客]是一个简约、直观、漂亮并且开源的博客浏览应用，遵循Android设计风格。
        UI借鉴国外应用 <a href="https://www.etsy.com/">Etsy</a> 。<br/>
        <a href="http://likebamboo.com/AndroidBlog/">AndroidBlog网站</a>已经上线。
        ]]>
    </string>
    <string name="look_detail">更多...</string>

    <string name="select_all">全选</string>
    <string name="select_nothing">全不选</string>
    <string name="delete">删除</string>

    <string name="sort">排序</string>

    <string name="contact">联系方式:</string>
    <string name="issue_title">问题:</string>
    <string name="please_input_contact">请填写邮箱/手机号</string>
    <string name="please_input_contact_correct">请填写正确的邮箱或手机号</string>
    <string name="please_select_issues">请选择问题类型</string>
    <string name="description">描述:</string>
    <string name="please_write_detail">请填写问题详细信息</string>
    <string name="submit">提交</string>

    <string name="feedback_commit_success">您的反馈信息我们已经收到，感谢使用~</string>

    <string name="introduction">简介：</string>
    <string name="other">其他：</string>
    <string name="home_page">主页</string>
    <string name="github">GitHub</string>
    <string name="blog_recommend">博客推荐</string>
</resources>
