<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/nav_discover"/>
        <item
            android:id="@+id/nav_recommend"
            android:icon="@drawable/ic_share_black"
            android:title="@string/nav_recommend"/>
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_games_black"
            android:title="@string/nav_category"/>
        <item
            android:id="@+id/nav_author"
            android:icon="@drawable/ic_people_black"
            android:title="@string/nav_author"/>
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_star_black"
            android:title="@string/nav_favorite"/>

    </group>

    <item
        android:checkableBehavior="single"
        android:title="@string/nav_title_other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black"
                android:title="@string/nav_settings"/>
        </menu>
    </item>
</menu>
