<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_large"
            android:paddingRight="@dimen/padding_large">

            <TextView
                android:id="@+id/feed_title_tv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_large"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_larger"/>

            <TextView
                android:id="@+id/feed_contact_tv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/contact"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_large"/>

            <EditText
                android:id="@+id/feed_contact_et"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_input_contact"
                android:minHeight="45dp"
                android:textColor="@color/actionbar_text"
                android:textSize="@dimen/text_medium"/>

            <TextView
                android:id="@+id/feed_issues_tv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:gravity="center_vertical"
                android:text="@string/issue_title"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_medium"/>

            <com.likebamboo.osa.android.ui.view.TagGroup
                android:id="@+id/feed_issues_tags"
                style="@style/TagGroup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/feed_desc_tv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:gravity="center_vertical"
                android:text="@string/description"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_large"/>

            <EditText
                android:id="@+id/feed_desc_et"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="left|top"
                android:hint="@string/please_write_detail"
                android:maxLines="6"
                android:minLines="3"
                android:textColor="@color/actionbar_text"
                android:textSize="@dimen/text_medium"/>

            <TextView
                android:id="@+id/feed_submit_tv"
                android:layout_width="fill_parent"
                android:layout_height="45dip"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/bg_feedback_submit_selector"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_larger"/>

        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/loading_layout"
        layout="@layout/space_loading_layout"
        android:visibility="gone"/>
</FrameLayout>