<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/blog_info_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding_large">

        <TextView
            android:id="@+id/blog_title_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_large"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_larger"/>

        <!--作者or译者-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/blog_author_title_tv"
                style="@style/AuhtorInfoTextView.Title"
                android:text="@string/author"
                android:textSize="@dimen/text_medium"/>

            <TextView
                android:id="@+id/blog_author_tv"
                style="@style/AuhtorInfoTextView.Info"
                android:text="@string/app_name"/>
        </LinearLayout>

        <!--链接-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/AuhtorInfoTextView.Title"
                android:text="@string/source_link"
                android:textSize="@dimen/text_medium"/>

            <TextView
                android:id="@+id/blog_link_tv"
                style="@style/AuhtorInfoTextView.Info"
                android:gravity="center_vertical"
                android:text="@string/app_name"
                android:textSize="@dimen/text_medium"/>
        </LinearLayout>

        <!--发表时间-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/AuhtorInfoTextView.Title"
                android:text="@string/post_time"
                android:textSize="@dimen/text_medium"/>

            <TextView
                android:id="@+id/blog_time_tv"
                style="@style/AuhtorInfoTextView.Info"
                android:text="@string/app_name"
                android:textSize="@dimen/text_medium"/>
        </LinearLayout>

        <!--分类-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/AuhtorInfoTextView.Title"
                android:text="@string/category"
                android:textSize="@dimen/text_medium"/>

            <TextView
                android:id="@+id/blog_category_tv"
                style="@style/AuhtorInfoTextView.Info"
                android:text="@string/app_name"
                android:textSize="@dimen/text_medium"/>
        </LinearLayout>


        <!--原博客信息(针对翻译)-->
        <!--作者-->
        <LinearLayout
            android:id="@+id/blog_o_author_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/AuhtorInfoTextView.Title"
                android:text="@string/o_author"
                android:textSize="@dimen/text_medium"/>

            <TextView
                android:id="@+id/blog_o_author_tv"
                style="@style/AuhtorInfoTextView.Info"
                android:text="@string/app_name"/>
        </LinearLayout>

        <!--链接-->
        <LinearLayout
            android:id="@+id/blog_o_link_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/AuhtorInfoTextView.Title"
                android:text="@string/o_link"
                android:textSize="@dimen/text_medium"/>

            <TextView
                android:id="@+id/blog_o_link_tv"
                style="@style/AuhtorInfoTextView.Info"
                android:gravity="center_vertical"
                android:text="@string/app_name"
                android:textSize="@dimen/text_medium"/>
        </LinearLayout>

        <!--发表时间-->
        <LinearLayout
            android:id="@+id/blog_o_time_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/AuhtorInfoTextView.Title"
                android:text="@string/o_post_time"
                android:textSize="@dimen/text_medium"/>

            <TextView
                android:id="@+id/blog_o_time_tv"
                style="@style/AuhtorInfoTextView.Info"
                android:text="@string/app_name"
                android:textSize="@dimen/text_medium"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>